--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js",
-  "install": "npm install",
-  "test": "echo \"Ejecutando pruebas automáticas (futuro)\" && exit 0"
-
-
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "install": "npm install",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +20,7 @@
     "express-validator": "^7.3.0"
   },
   "devDependencies": {
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10"
   }
 }
